--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
 
 # Database
 *.db
@@ -110,3 +111,4 @@ _log/
 # PRODUCTO.md - ✓
 # LICENSE - ✓
 # .env.example - ✓
+backend/.env
